--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
     "name": "dockerproject",
     "version": "1.0.0",
     "description": "",
-    "main": "send.js",
+    "main": "./src/receive.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon ./src/index.js"
+        "dev": "nodemon ./src/server.js ./src/receive.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "amqplib": "^0.10.3",
+        "axios": "^1.2.5",
+        "cors": "^2.8.5",
+        "express-list-endpoints": "^6.0.0",
         "lodash": "^4.17.21",
+        "mongoose": "^6.9.0",
         "nodemon": "^2.0.20"
     }
 }
